--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     app_name: "e-Boutique"
+    default_password: "boutique2022"
 
 services:
     # default configuration for services in *this* file
