--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
         "@symfony/webpack-encore": "^2.0.0",
         "core-js": "^3.0.0",
         "regenerator-runtime": "^0.13.2",
+        "sass": "^1.53.0",
+        "sass-loader": "^12.6.0",
         "webpack-notifier": "^1.6.0"
     },
     "license": "UNLICENSED",
@@ -17,10 +19,11 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "chartist-plugin-legend": "^0.6.2",
         "prop-types": "^15.8.1",
         "react": "^18.1.0",
-        "react-dom": "^18.1.0",
         "react-bootstrap": "^2.3.1",
+        "react-dom": "^18.1.0",
         "react-select": "^5.3.2"
     }
 }
