--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "@symfony/webpack-encore": "^2.0.0",
         "core-js": "^3.0.0",
         "regenerator-runtime": "^0.13.2",
-        "sass": "^1.53.0",
+        "sass": "^1.5.1",
         "sass-loader": "^12.6.0",
         "webpack-notifier": "^1.6.0"
     },
@@ -19,6 +19,9 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "@emotion/react": "^11.9.3",
+        "@emotion/styled": "^11.9.3",
+        "@mui/material": "^5.9.1",
         "chartist-plugin-legend": "^0.6.2",
         "prop-types": "^15.8.1",
         "react": "^18.1.0",
