--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -28,6 +28,12 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/login$, roles: PUBLIC_ACCESS }
+        - { path: ^/produit/approvisionnement, roles: [ROLE_ADMINISTRATEUR, ROLE_AGENT_APPRO] }
+        - { path: ^/produit/list, roles: [ROLE_ADMINISTRATEUR, ROLE_AGENT_APPRO, ROLE_VENDEUR(SE)] }
+        - { path: ^/caisse, roles: [ROLE_ADMINISTRATEUR, ROLE_VENDEUR(SE)] }
+        - { path: ^/produit/*, roles: ROLE_ADMINISTRATEUR }
+        - { path: ^/parametre/*, roles: ROLE_ADMINISTRATEUR }
+        - { path: ^/parametre-valeur/*, roles: ROLE_ADMINISTRATEUR }
         - { path: ^/*, roles: IS_AUTHENTICATED_REMEMBERED}
         #- { path: ^/./$, roles: IS_AUTHENTICATED}
         # - { path: ^/admin, roles: ROLE_ADMIN }
