--- a/config/packages/monolog.yaml
+++ b/config/packages/monolog.yaml
@@ -42,20 +42,20 @@ when@prod:
         handlers:
             main:
                 type: fingers_crossed
-                action_level: error
-                handler: nested
-                excluded_http_codes: [404, 405]
-                buffer_size: 50 # How many messages should be saved? Prevent memory leaks
-            nested:
-                type: stream
-                path: php://stderr
-                level: debug
-                formatter: monolog.formatter.json
-            console:
-                type: console
-                process_psr_3_messages: false
-                channels: ["!event", "!doctrine"]
-            deprecation:
-                type: stream
-                channels: [deprecation]
-                path: php://stderr
+                action_level: error #error
+                handler: deduplicated
+                excluded_http_codes: [404, 405, 500, 403, 401]
+                #buffer_size: 50 # How many messages should be saved? Prevent memory leaks
+            deduplicated:
+                type:    deduplication
+                handler: symfony_mailer
+            symfony_mailer:
+                type:       symfony_mailer
+                from_email: 'contact@herihaja.com'
+                to_email:   'hery.imiary@gmail.com'
+                # or list of recipients
+                # to_email:   ['dev1@example.com', 'dev2@example.com', ...]
+                subject:    'An Error Occurreda! %%message%%'
+                level:      debug
+                formatter:  monolog.formatter.html
+                content_type: text/html
