--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "prop-types": "^15.8.1",
         "react": "^18.1.0",
         "react-bootstrap": "^2.3.1",
+        "react-datepicker": "^4.8.0",
         "react-dom": "^18.1.0",
         "react-select": "^5.3.2"
     }
